# ChangeLog for dev-util/git
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/git/ChangeLog,v 1.159 2007/01/09 07:59:28 corsair Exp $

  09 Jan 2007; Markus Rothe <corsair@gentoo.org> git-1.4.4.3.ebuild:
  Stable on ppc64; bug #159822

  07 Jan 2007; Tobias Scherbaum <dertobi123@gentoo.org> git-1.4.4.3.ebuild:
  ppc stable, bug #159822

  06 Jan 2007; Fernando J. Pereda <ferdy@gentoo.org> -git-1.4.3.5.ebuild,
  -git-1.4.4.2.ebuild:
  QA: Clean unused versions.

  06 Jan 2007; Fernando J. Pereda <ferdy@gentoo.org> git-1.4.1.1.ebuild,
  git-1.4.2.4.ebuild, git-1.4.3.5.ebuild, git-1.4.4.2.ebuild,
  git-1.4.4.3.ebuild:
  einfo -> elog

  04 Jan 2007; Bryan Østergaard <kloeri@gentoo.org> git-1.4.4.3.ebuild:
  Stable on IA64.

  04 Jan 2007; Torsten Veller <tove@gentoo.org> git-1.4.4.3.ebuild:
  Stable on x86 (#159822)

  04 Jan 2007; Fernando J. Pereda <ferdy@gentoo.org> git-1.4.4.3.ebuild:
  Stable on alpha as per bug #159822

  04 Jan 2007; Gustavo Zacarias <gustavoz@gentoo.org> git-1.4.4.3.ebuild:
  Stable on sparc wrt #159822

  03 Jan 2007; Fernando J. Pereda <ferdy@gentoo.org> git-1.4.4.3.ebuild:
  git-instaweb has some additional dependencies, fixes bug #159698

  31 Dec 2006; Robin H. Johnson <robbat2@gentoo.org> git-1.4.3.5.ebuild,
  git-1.4.4.2.ebuild, git-1.4.4.3.ebuild:
  Fix type in einfo.

*git-1.4.4.3 (20 Dec 2006)

  20 Dec 2006; Fernando J. Pereda <ferdy@gentoo.org> +git-1.4.4.3.ebuild:
  New upstream version.

*git-1.4.4.2 (07 Dec 2006)

  07 Dec 2006; Fernando J. Pereda <ferdy@gentoo.org> -git-1.4.4.ebuild,
  -git-1.4.4.1.ebuild, +git-1.4.4.2.ebuild:
  New upstream version. Clean old ebuilds for the 1.4.4 branch.

*git-1.4.4.1 (26 Nov 2006)

  26 Nov 2006; Fernando J. Pereda <ferdy@gentoo.org> +git-1.4.4.1.ebuild:
  New upstream version.

  16 Nov 2006; Fernando J. Pereda <ferdy@gentoo.org> git-1.4.4.ebuild:
  Remove tar-tree tests if we don't have unzip installed.
