@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX 70git-gentoo.el 88 RMD160 fe9b87bdbe14141580745063092a5d08924f23fd SHA1 332f9cbf5a1dbb176e54646fa23aa140aee917f7 SHA256 7589206de5ea91e912e0332f7dc503689d348cb752e17ba84a724987c4bbe04a
 MD5 626503da08b9af48199596c83d6f49b3 files/70git-gentoo.el 88
 RMD160 fe9b87bdbe14141580745063092a5d08924f23fd files/70git-gentoo.el 88
@@ -17,12 +20,15 @@ SHA256 6a3503904204163775722e8a455e4ebaa8648f6d288340979387ad4eb55f4c0a files/gi
 DIST git-1.4.1.1.tar.bz2 752419 RMD160 1e8c8cc2ee0685fb0ece9e0ee0720cb608140c05 SHA1 376a96ecf68cf90fa0b29fde700e5e947967531a SHA256 e4a9ef8403c3716f7494d4865ee6c3e862b93012df41522237ace91f68a6d6ce
 DIST git-1.4.2.4.tar.bz2 787793 RMD160 03664bb1c98c7d9dc8c6f1dfa56149d807fd5164 SHA1 ff80a407cbad5b759adaecf434b37b293a167096 SHA256 1efbbee0e3e8704b25ef6fbc9519ba6f94a21aee48a231b986408627a4017632
 DIST git-1.4.4.3.tar.bz2 888091 RMD160 06184ee7e16c12687b4a644c38d23ff7732e4c54 SHA1 d41b8e62b2c0b5f3ea994bed4618a44cbcfb319e SHA256 5485e66a811f8a047124f1358ded268916fcf07ecccb9345f429b4ea8b76603e
+DIST git-1.4.4.4.tar.bz2 888482 RMD160 a507e7d636e771fb3ed03054d3d70e6758385c28 SHA1 b9243da9071d28f616b530eff94a46fb223cc368 SHA256 b2117774fb96d53f4b07d89df389ee0097f29637c859ec8fecc020cf37622657
 DIST git-htmldocs-1.4.1.1.tar.bz2 263120 RMD160 4a50c2cec7ecd612690ee5dd0f7fbe69f11fe1bf SHA1 6a22f41064f1db29e69a65ad2177e9f6e18aea77 SHA256 8e4ccf995645fe08f7644b62535c4054515355942b5f3551fcbebd3f5ec36d1d
 DIST git-htmldocs-1.4.2.4.tar.bz2 283907 RMD160 6aaa9e601cc16d4e45176e58fbbc87a332afb243 SHA1 e05b2ef0a5354b8c6ff4d043d620e0b229cda7a9 SHA256 90f3ad4bced74bbadfc6f02a1c3d222a6bcf13d940b9aef368b7cbae083c1f86
 DIST git-htmldocs-1.4.4.3.tar.bz2 325744 RMD160 52c8f9088ca969255ff93f719563b65f43a59a9f SHA1 1ab02de5bae511f07b19c6048626160d99ff145c SHA256 cca1f7dec9dd063d78920e4d2f7a9a47fa57cfd883b872883b60795541c2c585
+DIST git-htmldocs-1.4.4.4.tar.bz2 325718 RMD160 cf55f807769e8aa731d512b654e847089d25ea0e SHA1 66192a27b74aef8e673252174dda8c9be23dcd7a SHA256 196e901cd416f48b8068a10914455a27aa542bc821f677a705a69fb950145975
 DIST git-manpages-1.4.1.1.tar.bz2 83956 RMD160 894b8717e9e4099f7aacb97a3673e81c09e23daf SHA1 c899fbdef72bdfdb29c03e3372ee736781d58289 SHA256 2b2759a15eb9432e972743846c7299518e542e99a23a7318c540f0086e746ee4
 DIST git-manpages-1.4.2.4.tar.bz2 90375 RMD160 0b3d486d04a5a64aab273c75823c603f307fcd02 SHA1 961b3981f074663ec64bbbc5b82fdab0c45b7919 SHA256 6e0520fd779225e79957871d981ddfc9e93f157374de88f654d4f20958557518
 DIST git-manpages-1.4.4.3.tar.bz2 104756 RMD160 b10969ec6702606ea348d9a6fe05831e28fbcc00 SHA1 decdee44cca3f89843a290402c30422dde9edfa1 SHA256 7f11c3f55a86fc7e445e6bf97d049564e586902bb53e48c6048b7ce0ad90675e
+DIST git-manpages-1.4.4.4.tar.bz2 103840 RMD160 488e8ad8514180ed1d2d2d0d5e948351d4092f29 SHA1 17d7246560049ebcab7e7a67c2b82e8fb233e42e SHA256 73f136bd93683fa559b22c8770acaebce70699798f6797e840d23a2a5cffa3a4
 EBUILD git-1.4.1.1.ebuild 4338 RMD160 c60faee4041943f56b2b64abde8b26bc7a9d1e17 SHA1 47c42f4ff8d3100a645226934fb9da442e07bae5 SHA256 d0435724636b6ff0749af989a7d493284df3eb38d2c0bcd1b0f29a33d726e606
 MD5 62bdf011ee3296485f8c8fbc2f3ecd35 git-1.4.1.1.ebuild 4338
 RMD160 c60faee4041943f56b2b64abde8b26bc7a9d1e17 git-1.4.1.1.ebuild 4338
@@ -35,10 +41,14 @@ EBUILD git-1.4.4.3.ebuild 4259 RMD160 01a2400deefe0648274f841b5df002f90f6fe201 S
 MD5 5f6b0b14241869a4b5e9452423f80742 git-1.4.4.3.ebuild 4259
 RMD160 01a2400deefe0648274f841b5df002f90f6fe201 git-1.4.4.3.ebuild 4259
 SHA256 87f7f86a7344187b1a50f1e16cd678f86f557752791083cf3f4bcefd479980d1 git-1.4.4.3.ebuild 4259
-MISC ChangeLog 22914 RMD160 1ca6b39a5214482e18dc22ce14fa6d674bd35670 SHA1 65b361a7901f2c48df0692b3fce6f7138b20be16 SHA256 7b764f9695b2ef2a483c2a45b3f50783f676b680fa1a6ad4925c4aa6d9a1a5c6
-MD5 f671bb8e4e1c29874625b25ce583843e ChangeLog 22914
-RMD160 1ca6b39a5214482e18dc22ce14fa6d674bd35670 ChangeLog 22914
-SHA256 7b764f9695b2ef2a483c2a45b3f50783f676b680fa1a6ad4925c4aa6d9a1a5c6 ChangeLog 22914
+EBUILD git-1.4.4.4.ebuild 4261 RMD160 9225e32ae7acf3cb9133bbc287f45d0347097d59 SHA1 f8dbc7691dc8bdaa2d1971ed274716f8388445c0 SHA256 bb912da2f322728c679b3e54d27aef91a09b4d63161827776184ca86432e8480
+MD5 7fb4424950fd55d65c641c4c6b70c6ba git-1.4.4.4.ebuild 4261
+RMD160 9225e32ae7acf3cb9133bbc287f45d0347097d59 git-1.4.4.4.ebuild 4261
+SHA256 bb912da2f322728c679b3e54d27aef91a09b4d63161827776184ca86432e8480 git-1.4.4.4.ebuild 4261
+MISC ChangeLog 23065 RMD160 47bda64a11cb19127139d141e37f51a2abc2d199 SHA1 0983469532e01142e78c29f1dfb33e0f5f9aaf2b SHA256 c107a08def77905893fd04f462d04e730d9d2d5367c92898d6cb8fda59c92843
+MD5 635f5de2148d01501c02d4b9109e7b89 ChangeLog 23065
+RMD160 47bda64a11cb19127139d141e37f51a2abc2d199 ChangeLog 23065
+SHA256 c107a08def77905893fd04f462d04e730d9d2d5367c92898d6cb8fda59c92843 ChangeLog 23065
 MISC metadata.xml 253 RMD160 e09bab6a5a422f501b8e07a3983c5790e00ac92a SHA1 7c2340e011ce57927ff31d7e3397ef4bb1c7ad27 SHA256 1f2e9f9f57e781c296ac5c39c54eabf82a47b7facd0698b296bc76f50799432c
 MD5 22c5a3ad567fa12332dab8687b9c2d1c metadata.xml 253
 RMD160 e09bab6a5a422f501b8e07a3983c5790e00ac92a metadata.xml 253
@@ -52,3 +62,13 @@ SHA256 d48ebc25dd2dcb75d72f633f74f2754ddb2fd25894abe15cb0159e429dccb7a5 files/di
 MD5 beefd1f4ff4f54bfe0888fbce5026ffa files/digest-git-1.4.4.3 768
 RMD160 c0337f2dc4c1f48d7438d007a73a7fcb0ef199f0 files/digest-git-1.4.4.3 768
 SHA256 666f5fe026723735f156653f2565168d6c3f902e176d9c009a4c75ae992e475b files/digest-git-1.4.4.3 768
+MD5 0edc8e793ae211228a6b9b338d242566 files/digest-git-1.4.4.4 768
+RMD160 ade2fb97dffc61de86d80cffc0b4292ba9027bda files/digest-git-1.4.4.4 768
+SHA256 ace650aa865e2cbf70cf1e76a858085da178e9f98f58f28bbabbc972be98467e files/digest-git-1.4.4.4 768
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v1.4.2.2 (GNU/Linux)
+
+iD8DBQFFp+lyViELBEf1JB0RArFJAJoCv6scHejSp7gu0DYxXyUVhhylwQCfSxoM
+kZtPtCL+3ffHb6KUa0sx9M4=
+=j7pS
+-----END PGP SIGNATURE-----
