@@ -1,0 +1,9 @@
+MD5 970aceba959e7fe92f065d7509e6db51 git-1.4.4.4.tar.bz2 888482
+RMD160 a507e7d636e771fb3ed03054d3d70e6758385c28 git-1.4.4.4.tar.bz2 888482
+SHA256 b2117774fb96d53f4b07d89df389ee0097f29637c859ec8fecc020cf37622657 git-1.4.4.4.tar.bz2 888482
+MD5 dc11d0b76012c59b5de42520e543a8e5 git-htmldocs-1.4.4.4.tar.bz2 325718
+RMD160 cf55f807769e8aa731d512b654e847089d25ea0e git-htmldocs-1.4.4.4.tar.bz2 325718
+SHA256 196e901cd416f48b8068a10914455a27aa542bc821f677a705a69fb950145975 git-htmldocs-1.4.4.4.tar.bz2 325718
+MD5 6d1cf748480cb6f50d4990660cca3921 git-manpages-1.4.4.4.tar.bz2 103840
+RMD160 488e8ad8514180ed1d2d2d0d5e948351d4092f29 git-manpages-1.4.4.4.tar.bz2 103840
+SHA256 73f136bd93683fa559b22c8770acaebce70699798f6797e840d23a2a5cffa3a4 git-manpages-1.4.4.4.tar.bz2 103840
