@@ -1,6 +1,11 @@
 # ChangeLog for dev-util/git
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/git/ChangeLog,v 1.159 2007/01/09 07:59:28 corsair Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/git/ChangeLog,v 1.160 2007/01/12 20:02:46 ferdy Exp $
+
+*git-1.4.4.4 (12 Jan 2007)
+
+  12 Jan 2007; Fernando J. Pereda <ferdy@gentoo.org> +git-1.4.4.4.ebuild:
+  Version bump + stable on Alpha. See bug #159822
 
   09 Jan 2007; Markus Rothe <corsair@gentoo.org> git-1.4.4.3.ebuild:
   Stable on ppc64; bug #159822
